completed swagger documentation
